--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <span></span>
             </button>
             <ul class="navbar__links">
+                <button class="theme-toggle" aria-label="Toggle dark mode" aria-pressed="false">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
