--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <!-- Hero Content Side -->
                 <div class="hero__content fade-in-up" data-delay="0.1">
-                    <p class="hero__eyebrow">Hello, I’m</p>
+                    <p class="hero__eyebrow">Hey there!</p>
                     <h1 class="hero__title" id="hero-title">Khea Moral</h1>
                     <p class="hero__subtitle">Aspiring IT Professional | BSIT 2nd Year Student</p>
 
@@ -253,3 +253,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 </html>
+
